force-app/main/default/objects/pse__Timecard_Header__c/fields/Assignment_Bill_Rate__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Bill_Rate__c</fullName>
    <formula>pse__Assignment__r.pse__Bill_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assignment Bill Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>