force-app/main/default/objects/pse__Timecard_Header__c/fields/Assignment_Total_Hours_In_Financials__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Total_Hours_In_Financials__c</fullName>
    <formula>pse__Assignment__r.Total_Hours_in_Financials__c</formula>
    <label>Assignment Total Hours In Financials</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>