force-app/main/default/objects/pse__Timecard_Header__c/fields/Assignment_Type__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Type__c</fullName>
    <formula>TEXT(pse__Project__r.pse__Project_Type__c)</formula>
    <label>Assignment Type</label>
    <type>Text</type>
</CustomField>