force-app/main/default/objects/pse__Timecard_Header__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <formula>HYPERLINK(&quot;https://na3.salesforce.com/&quot;&amp;pse__Project__r.pse__Opportunity__r.Associated_Contract_OSA__r.Id,pse__Project__r.pse__Opportunity__r.Associated_Contract_OSA__r.ContractNumber)</formula>
    <label>Contract</label>
    <type>Text</type>
</CustomField>