force-app/main/default/objects/pse__Timecard_Header__c/fields/Date_Added_to_Pre_Bill__c.field-meta.xml
<CustomField>
    <fullName>Date_Added_to_Pre_Bill__c</fullName>
    <label>Date Added to Pre-Bill</label>
    <type>DateTime</type>
</CustomField>