force-app/main/default/objects/pse__Timecard_Header__c/fields/External_Resource__c.field-meta.xml
<CustomField>
    <fullName>External_Resource__c</fullName>
    <formula>pse__Resource__r.pse__External_Resource__c</formula>
    <label>External Resource (Formula)</label>
    <type>Checkbox</type>
</CustomField>