force-app/main/default/objects/pse__Timecard_Header__c/fields/Fixed_Fee_Hours__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Fee_Hours__c</fullName>
    <formula>IF(
  ISPICKVAL(pse__Project__r.pse__Project_Type__c,&quot;Customer Project&quot;),
  IF(
    pse__Assignment__r.T_M_Assignment__c = TRUE,
    0,
    pse__Total_Hours__c
  ),
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fixed Fee Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>