force-app/main/default/objects/pse__Timecard_Header__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <formula>pse__Resource__r.pse__Group__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group</label>
    <type>Text</type>
</CustomField>