force-app/main/default/objects/pse__Timecard_Header__c/fields/Invoice_Status__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Status__c</fullName>
    <description>Used to designate the status of the NetSuite Integration and Invoicing status.</description>
    <inlineHelpText>This field is set by the NetSuite Integration.</inlineHelpText>
    <label>Invoice Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not-Synced</fullName>
                <default>true</default>
                <label>Not-Synced</label>
            </value>
            <value>
                <fullName>Synced</fullName>
            </value>
            <value>
                <fullName>Invoiced</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Exception</fullName>
            </value>
            <value>
                <fullName>Exclude from Billing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>