force-app/main/default/objects/pse__Timecard_Header__c/fields/Is_Resource__c.field-meta.xml
<CustomField>
    <fullName>Is_Resource__c</fullName>
    <formula>pse__Resource__r.pse__Is_Resource__c</formula>
    <label>Is Resource</label>
    <type>Checkbox</type>
</CustomField>