force-app/main/default/objects/pse__Timecard_Header__c/fields/Object_Type_2__c.field-meta.xml
<CustomField>
    <fullName>Object_Type_2__c</fullName>
    <label>Object Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Project,Opportunity,Case,Product Customer,Account</fullName>
            </value>
            <value>
                <fullName>Project</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Case</fullName>
            </value>
            <value>
                <fullName>Product Customer</fullName>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>