force-app/main/default/objects/pse__Timecard_Header__c/fields/Practice__c.field-meta.xml
<CustomField>
    <fullName>Practice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Line</label>
    <referenceTo>pse__Practice__c</referenceTo>
    <relationshipLabel>Timecards (Product Line)</relationshipLabel>
    <relationshipName>Timecards</relationshipName>
    <type>Lookup</type>
</CustomField>