force-app/main/default/objects/pse__Timecard_Header__c/fields/pse__Project_Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>pse__Project_Exchange_Rate__c</fullName>
    <defaultValue>1.00</defaultValue>
    <description>Project (Bill Rate) Exchange Rate, relative to Corporate Currency, calculated on End Date of Timecard</description>
    <inlineHelpText>Project (Bill Rate) Exchange Rate, relative to Corporate Currency, calculated on End Date of Timecard</inlineHelpText>
    <label>Project Exchange Rate</label>
    <precision>12</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>