force-app/main/default/objects/pse__Timecard_Header__c/fields/Reference__c.field-meta.xml
<CustomField>
    <fullName>Reference__c</fullName>
    <description>Reference ID from either DTE (allows us to reference the time entry that created the Timecard)</description>
    <externalId>true</externalId>
    <label>DTE Reference</label>
    <length>40</length>
    <type>Text</type>
</CustomField>