force-app/main/default/objects/pse__Timecard_Header__c/fields/Related_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Related_Milestone__c</fullName>
    <formula>IF(ISBLANK(pse__Milestone__c),pse__Project__r.Name,pse__Milestone__r.Name)</formula>
    <label>Related Milestone</label>
    <type>Text</type>
</CustomField>