force-app/main/default/objects/pse__Timecard_Header__c/fields/Related_Milestone_Actual_Date__c.field-meta.xml
<CustomField>
    <fullName>Related_Milestone_Actual_Date__c</fullName>
    <formula>pse__Milestone__r.pse__Actual_Date__c</formula>
    <label>Related Milestone Actual Date</label>
    <type>Date</type>
</CustomField>