force-app/main/default/objects/pse__Timecard_Header__c/fields/Resource_Region__c.field-meta.xml
<CustomField>
    <fullName>Resource_Region__c</fullName>
    <formula>pse__Resource__r.pse__Region__r.Name</formula>
    <label>Resource Region</label>
    <type>Text</type>
</CustomField>