force-app/main/default/objects/pse__Timecard_Header__c/fields/Task_Deployment_Support__c.field-meta.xml
<CustomField>
    <fullName>Task_Deployment_Support__c</fullName>
    <defaultValue>0.0</defaultValue>
    <label>Task: Deployment Support</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>