force-app/main/default/objects/pse__Timecard_Header__c/fields/Task_Training__c.field-meta.xml
<CustomField>
    <fullName>Task_Training__c</fullName>
    <defaultValue>0.0</defaultValue>
    <label>Task: Training</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>