force-app/main/default/objects/pse__Timecard_Header__c/fields/Time_Billing__c.field-meta.xml
<CustomField>
    <fullName>Time_Billing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Time Billing</label>
    <referenceTo>Time_Billing__c</referenceTo>
    <relationshipLabel>Timecards</relationshipLabel>
    <relationshipName>Timecards</relationshipName>
    <type>Lookup</type>
</CustomField>