force-app/main/default/objects/pse__Timecard_Header__c/fields/Timecard_Date__c.field-meta.xml
<CustomField>
    <fullName>Timecard_Date__c</fullName>
    <label>Timecard Date</label>
    <type>Date</type>
</CustomField>