force-app/main/default/objects/pse__Timecard_Header__c/fields/Weekly_Notes__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Notes__c</fullName>
    <formula>IF(
   ISBLANK(pse__Monday_Notes__c),&quot;&quot;,pse__Monday_Notes__c&amp;&quot;; &quot;
   ) &amp;
IF(
   ISBLANK(pse__Tuesday_Notes__c),&quot;&quot;,pse__Tuesday_Notes__c&amp;&quot;; &quot;
   ) &amp;
IF(
   ISBLANK(pse__Wednesday_Notes__c),&quot;&quot;,pse__Wednesday_Notes__c&amp;&quot;; &quot;
   ) &amp;
IF(
   ISBLANK(pse__Thursday_Notes__c),&quot;&quot;,pse__Thursday_Notes__c&amp;&quot;; &quot;
   ) &amp;
IF(
   ISBLANK(pse__Friday_Notes__c),&quot;&quot;,pse__Friday_Notes__c&amp;&quot;; &quot;
   ) &amp;
IF(
   ISBLANK(pse__Saturday_Notes__c),&quot;&quot;,pse__Saturday_Notes__c&amp;&quot;; &quot;
   ) &amp;
IF(
   ISBLANK(pse__Sunday_Notes__c),&quot;&quot;,pse__Sunday_Notes__c&amp;&quot;; &quot;
   )</formula>
    <label>Weekly Notes</label>
    <type>Text</type>
</CustomField>