force-app/main/default/objects/pse__Timecard_Header__c/validationRules/Cannot_check_exclude_if_billable_amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_check_exclude_if_billable_amount</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  pse__Exclude_from_Billing__c,
  NOT(pse__Total_Billable_Amount__c = 0),
  NOT($Profile.Id=&quot;00e30000000bvR3&quot;)
)</errorConditionFormula>
    <errorDisplayField>pse__Exclude_from_Billing__c</errorDisplayField>
    <errorMessage>You cannot exclude a timecard with billable amount from billing. Please mark the timecard as non-billable first.</errorMessage>
</ValidationRule>