force-app/main/default/objects/pse__Timecard_Header__c/validationRules/PSA_Timecard_Milestone_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>PSA_Timecard_Milestone_Required</fullName>
    <active>false</active>
    <description>Milestone is required for billable customer projects.</description>
    <errorConditionFormula>AND (  
ISPICKVAL( pse__Project__r.pse__Project_Type__c, &quot;Customer Project&quot; ) ,  
pse__Project__r.pse__Is_Billable__c = True ,
ISBLANK(  pse__Milestone__c ),
NOT($Profile.Id=&quot;00e50000001BmUZ&quot;)
)</errorConditionFormula>
    <errorMessage>Milestone is required for billable customer projects.</errorMessage>
</ValidationRule>