force-app/main/default/objects/pse__Timecard_Header__c/validationRules/Timecard_cannot_be_edited_if_synced.validationRule-meta.xml
<ValidationRule>
    <fullName>Timecard_cannot_be_edited_if_synced</fullName>
    <active>true</active>
    <description>A timecard cannot be edited after it&apos;s synced to NetSuite</description>
    <errorConditionFormula>AND(
  NOT(ISCHANGED(Phase__c)), 
  NOT(ISPICKVAL(Invoice_Status__c,&quot;Not-Synced&quot;)),
  NOT(ISPICKVAL(Invoice_Status__c,&quot;Exclude from Billing&quot;)),
  NOT($Profile.Id=&quot;00e50000001BmUZ&quot;),
  NOT($Profile.Id=&quot;00e30000000bvR3&quot;)
)</errorConditionFormula>
    <errorMessage>This timecard has already been synched to NetSuite. Please contact your system administrator to make any changes.</errorMessage>
</ValidationRule>