force-app/main/default/objects/pse__Timecard_Header__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>pse__Resource__c</columns>
    <columns>pse__Project__c</columns>
    <columns>Timecard_Date__c</columns>
    <columns>pse__Total_Hours__c</columns>
    <columns>T_M_Hours__c</columns>
    <columns>Narrative__c</columns>
    <columns>pse__Billable__c</columns>
    <columns>pse__Status__c</columns>
    <columns>pse__Submitted__c</columns>
    <columns>pse__Approved__c</columns>
    <columns>Weekly_Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pse__Resource__c</field>
        <operation>contains</operation>
        <value>Cordell,Shea,McGuire,Patrick,Kobak</value>
    </filters>
    <filters>
        <field>Timecard_Date__c</field>
        <operation>greaterThan</operation>
        <value>1/1/2015</value>
    </filters>
    <filters>
        <field>pse__Project__c</field>
        <operation>notContain</operation>
        <value>Internal</value>
    </filters>
    <label>December Time Cards</label>
</ListView>