force-app/main/default/objects/pse__Timecard_Header__c/listViews/All_Timecards_by_Project2.listView-meta.xml
<ListView>
    <fullName>All_Timecards_by_Project2</fullName>
    <columns>NAME</columns>
    <columns>pse__Assignment__c</columns>
    <columns>Timecard_Date__c</columns>
    <columns>pse__Status__c</columns>
    <columns>pse__Approver__c</columns>
    <columns>pse__Resource__c</columns>
    <filterScope>Mine</filterScope>
    <label>All Timecards by Project</label>
    <language>en_US</language>
</ListView>