force-app/main/default/objects/pse__Timecard_Header__c/listViews/All_Timecards_by_Project4.listView-meta.xml
<ListView>
    <fullName>All_Timecards_by_Project4</fullName>
    <columns>NAME</columns>
    <columns>pse__Assignment__c</columns>
    <columns>Timecard_Date__c</columns>
    <columns>pse__Status__c</columns>
    <columns>pse__Approver__c</columns>
    <columns>pse__Resource__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project_ID__c</field>
        <operation>equals</operation>
        <value>PR-007505</value>
    </filters>
    <filters>
        <field>Timecard_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>9/12/2016</value>
    </filters>
    <label>All Timecards by Project</label>
    <language>en_US</language>
</ListView>