force-app/main/default/objects/pse__Timecard_Header__c/listViews/All_Unsubmitted_Timecards.listView-meta.xml
<ListView>
    <fullName>All_Unsubmitted_Timecards</fullName>
    <booleanFilter>1 AND (2 or 3)</booleanFilter>
    <columns>NAME</columns>
    <columns>pse__Approver__c</columns>
    <columns>pse__Resource__c</columns>
    <columns>pse__Project__c</columns>
    <columns>pse__Start_Date__c</columns>
    <columns>pse__End_Date__c</columns>
    <columns>pse__Status__c</columns>
    <columns>pse__Total_Billable_Amount__c</columns>
    <columns>pse__Total_Hours__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pse__Status__c</field>
        <operation>equals</operation>
        <value>Saved,Rejected</value>
    </filters>
    <filters>
        <field>pse__Resource__c</field>
        <operation>contains</operation>
        <value>Arteaga,Gallagher,Agarwal,Quadros,Robinson,Miller,McCollum,Guyler</value>
    </filters>
    <filters>
        <field>pse__Resource__c</field>
        <operation>equals</operation>
        <value>Melinda Ward,Vickers</value>
    </filters>
    <label>EMEA Unsubmitted Timecards</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>