force-app/main/default/objects/pse__Timecard_Header__c/listViews/Brandon.listView-meta.xml
<ListView>
    <fullName>Brandon</fullName>
    <columns>Project_ID__c</columns>
    <columns>NAME</columns>
    <columns>pse__Resource__c</columns>
    <columns>pse__Project__c</columns>
    <columns>pse__Start_Date__c</columns>
    <columns>pse__End_Date__c</columns>
    <columns>pse__Status__c</columns>
    <columns>pse__Total_Hours__c</columns>
    <columns>Narrative__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pse__Resource__c</field>
        <operation>contains</operation>
    </filters>
    <filters>
        <field>pse__Start_Date__c</field>
        <operation>greaterThan</operation>
        <value>1/1/2016</value>
    </filters>
    <filters>
        <field>Project_ID__c</field>
        <operation>contains</operation>
        <value>PR-007501,PR-007504</value>
    </filters>
    <filters>
        <field>pse__Milestone__c</field>
        <operation>contains</operation>
    </filters>
    <filters>
        <field>pse__Billable__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Corrs Timecards</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>