force-app/main/default/objects/pse__Timecard_Header__c/listViews/Eileen_Whitaker.listView-meta.xml
<ListView>
    <fullName>Eileen_Whitaker</fullName>
    <columns>NAME</columns>
    <columns>pse__Project__c</columns>
    <columns>pse__Billable__c</columns>
    <columns>Timecard_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pse__Status__c</field>
        <operation>equals</operation>
        <value>Saved</value>
    </filters>
    <filters>
        <field>pse__Resource__c</field>
        <operation>equals</operation>
        <value>Eileen Whitaker</value>
    </filters>
    <label>Eileen Whitaker</label>
</ListView>