force-app/main/default/objects/pse__Timecard_Header__c/listViews/Jennifer_H_Timecards.listView-meta.xml
<ListView>
    <fullName>Jennifer_H_Timecards</fullName>
    <columns>NAME</columns>
    <columns>pse__Approver__c</columns>
    <columns>pse__Resource__c</columns>
    <columns>pse__Project__c</columns>
    <columns>pse__Start_Date__c</columns>
    <columns>pse__End_Date__c</columns>
    <columns>pse__Status__c</columns>
    <columns>pse__Total_Billable_Amount__c</columns>
    <columns>pse__Total_Hours__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pse__Resource__c</field>
        <operation>contains</operation>
        <value>Heltsley</value>
    </filters>
    <label>Jennifer H Timecards</label>
</ListView>