force-app/main/default/objects/pse__Timecard_Header__c/listViews/Jennifer_H_Timecards_this_week.listView-meta.xml
<ListView>
    <fullName>Jennifer_H_Timecards_this_week</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>pse__Approver__c</columns>
    <columns>pse__Resource__c</columns>
    <columns>pse__Project__c</columns>
    <columns>pse__Start_Date__c</columns>
    <columns>pse__End_Date__c</columns>
    <columns>pse__Status__c</columns>
    <columns>pse__Total_Billable_Amount__c</columns>
    <columns>pse__Total_Hours__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pse__Approver__c</field>
        <operation>contains</operation>
        <value>David Thompson</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>2/14/2018 12:00 AM</value>
    </filters>
    <label>DT  Timecards this week</label>
    <language>en_US</language>
</ListView>