force-app/main/default/objects/pse__Timecard_Header__c/listViews/My_Approved_Timecards.listView-meta.xml
<ListView>
    <fullName>My_Approved_Timecards</fullName>
    <columns>NAME</columns>
    <columns>pse__Approver__c</columns>
    <columns>pse__Resource__c</columns>
    <columns>pse__Project__c</columns>
    <columns>pse__Start_Date__c</columns>
    <columns>pse__End_Date__c</columns>
    <columns>pse__Status__c</columns>
    <columns>pse__Total_Hours__c</columns>
    <columns>pse__Billable__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pse__Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <filters>
        <field>pse__Assignment__c</field>
        <operation>equals</operation>
        <value>David Robinson</value>
    </filters>
    <label>Timecards approved by EWB</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>